Update categories recursive counts and parent products
